mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_continue_outside_loop.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Cannot use 'continue' outside of a loop
--> test_scripts/error_cases/parser_continue_outside_loop.mux:2:9
   |
 2 | continue
   |         ^
   |
= help: 'continue' can only be used inside a 'for' or 'while' loop
